--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,8 @@
     "grunt-contrib-compass": "~0.8.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-autoprefixer": "~0.7.3"
+    "grunt-autoprefixer": "~0.7.3",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-sass": "~0.7.3"
   }
 }
