--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,11 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-svgmin": "^1.1.2",
+    "gulp-svgstore": "^5.0.1",
     "gulp-watch": "^4.2.4",
     "sassdoc": "~2.1.9"
   }
