--- a/assets/package.json
+++ b/assets/package.json
@@ -4,14 +4,14 @@
   "description": "Custom Drupal theme",
   "main": "index.js",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-svgmin": "^1.1.2",
-    "gulp-svgstore": "^5.0.1",
-    "gulp-watch": "^4.2.4",
-    "sassdoc": "~2.1.9"
+    "gulp-svgmin": "^1.2.0",
+    "gulp-svgstore": "^5.0.4",
+    "gulp-watch": "^4.3.4",
+    "sassdoc": "^2.1.15"
   }
 }
