--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-newer": "^0.5.1",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
