--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -9,8 +9,11 @@
   "author": "drewbolles@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
