--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -17,6 +17,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6"
   }
 }
