--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -15,8 +15,11 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svgmin": "^1.2.2",
+    "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6"
   }
