--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -3,6 +3,7 @@
   "version": "8.0.0",
   "description": "custom drupal 8 theme build process",
   "main": "index.js",
+  "sasslintConfig": ".sass-lint.yml",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
+    "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
