--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -26,6 +26,8 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^1.5.3",
-    "gulp-watch": "^4.3.6"
+    "gulp-watch": "^4.3.6",
+    "sass-mq": "^3.2.9",
+    "susy": "^2.2.12"
   }
 }
