--- a/assets/src/package.json
+++ b/assets/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gotham",
   "version": "8.0.0",
-  "description": "custom drupal 8 theme build process",
+  "description": "Custom Drupal 8 theme build process",
   "main": "index.js",
   "sasslintConfig": ".sass-lint.yml",
   "scripts": {
@@ -10,15 +10,16 @@
   "author": "drewbolles@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint-plugin-babel": "^3.2.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sass-lint": "^1.1.1",
